--- a/src/pages/signin/SignIn.css
+++ b/src/pages/signin/SignIn.css
@@ -93,7 +93,7 @@
 .signin-style-link a,
 .signin-style-link a:visited {
     text-decoration: none;
-    color: #40CD32;
+    color: #3CBE6B;
 }
 
 .signin-style-link a:hover {
