--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -93,7 +93,7 @@
 .signup-style-link a,
 .signup-style-link a:visited {
     text-decoration: none;
-    color: #40CD32;
+    color: #3CBE6B;
 }
 
 .signup-style-link a:hover {
