--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -30,6 +30,7 @@
 
 .profile-header-content {
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 /* PROFILE FORM FIELDS*/
@@ -90,6 +91,7 @@
 
 .profile-remark-content {
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 .profile-style-link a,
