--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -26,6 +26,7 @@
 
 .signup-header-content {
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 /* SIGNUP FORM */
@@ -88,6 +89,7 @@
 
 .signup-remark-content {
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 .signup-style-link a,
@@ -347,3 +349,4 @@
         margin: 1em;
     }
 }
+
