--- a/src/pages/homepage/HomePage.css
+++ b/src/pages/homepage/HomePage.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 /* MAIN */
@@ -45,7 +46,7 @@
 .homepage-cards-inner-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     flex-basis: 100vw;
     flex-wrap: wrap;
     flex-shrink: 1;
@@ -72,6 +73,7 @@
 .homepage-card a:active {
     color: #FFFFFF;
     text-decoration: none;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 .homepage-card a:hover {
