--- a/src/pages/parkoverview/ParkOverview.css
+++ b/src/pages/parkoverview/ParkOverview.css
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 /* PARKOVERVIEW TEXT SECTION */
@@ -58,6 +59,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: baseline;
     margin: 40px 0;
 }
 
@@ -82,7 +84,7 @@
 .park-cards-inner-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     flex-basis: 100vw;
     flex-wrap: wrap;
     flex-shrink: 1;
@@ -98,19 +100,13 @@
     background-size: cover;
     background-position: center;
     border-radius: 10px;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #3CBE6B;
     flex-shrink: 1;
     flex-grow: 0;
     color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
     background-color: #3CBE6B;
     box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.4);
-}
-
-.park-card-text {
-    background-color: rgba(0, 0, 0, 0.4);
-    border-top: 1px solid #3CBE6B;
-    border-bottom: 1px solid #3CBE6B;
-    width: 100%;
 }
 
 .park-card a,
@@ -167,12 +163,10 @@
         width: 300px;
         height: 225px;
         margin: 0.75em;
+        padding: 0.25em;
     }
     .park-card h4 {
         margin-top: 0.25em;
-    }
-    .park-card-text {
-        padding: 0.25em;
     }
     .select-parks-page label{
         font-size: 0.5em;
@@ -223,12 +217,10 @@
         width: 280px;
         height: 210px;
         margin: 0.5em;
+        padding: 0.25em;
     }
     .park-card h4 {
         margin-top: 0.25em;
-    }
-    .park-card-text {
-        padding: 0.25em;
     }
     .select-parks-page label{
         font-size: 0.75em;
@@ -279,12 +271,10 @@
         width: 300px;
         height: 225px;
         margin: 0.75em;
+        padding: 0.25em;
     }
     .park-card h4 {
         margin-top: 0.25em;
-    }
-    .park-card-text {
-        padding: 0.25em;
     }
     .select-parks-page label{
         font-size: 1em;
@@ -335,12 +325,10 @@
         width: 400px;
         height: 300px;
         margin: 1.5em;
+        padding: 0.25em;
     }
     .park-card h4 {
         margin-top: 0.25em;
-    }
-    .park-card-text {
-        padding: 0.25em;
     }
     .select-parks-page label{
         font-size: 1em;
@@ -391,12 +379,10 @@
         width: 500px;
         height: 375px;
         margin: 3em;
+        padding: 0.5em;
     }
     .park-card h4 {
         margin-top: 0.5em;
-    }
-    .park-card-text {
-        padding: 0.5em;
     }
     .select-parks-page label{
         font-size: 1.25em;
@@ -447,12 +433,10 @@
         width: 600px;
         height: 450px;
         margin: 2em;
+        padding: 0.5em;
     }
     .park-card h4 {
         margin-top: 0.5em;
-    }
-    .park-card-text {
-        padding: 0.5em;
     }
     .select-parks-page label{
         font-size: 1.25em;
