--- a/src/pages/parkdetails/ParkDetails.css
+++ b/src/pages/parkdetails/ParkDetails.css
@@ -2,7 +2,7 @@
 
 .parkdetails-outer-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
@@ -17,13 +17,37 @@
 .parkdetails-inner-container {
     display: flex;
     flex-direction: column;
-    /*align-items: flex-start;*/
     flex-grow: 1;
     flex-shrink: 1;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     box-shadow: 12px 12px 12px rgba(255, 255, 255, 0.5);
     border: 2px solid #FFFFFF;
+}
+
+
+/* PARKDETAILS REMARK */
+
+.parkdetails-remark {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+}
+
+.parkdetails-remark-content {
+    color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+}
+
+.parkdetails-style-link a,
+.parkdetails-style-link a:visited {
+    text-decoration: none;
+    color: #3CBE6B;
+}
+
+.parkdetails-style-link a:hover {
+    color: #FB7302;
 }
 
 /* PARK DETAILS */
@@ -64,22 +88,159 @@
 
 /* Telefoon in portrait mode */
 @media screen and (max-width: 576px) {
-
+    .parkdetails-inner-container {
+        max-width: 85%;
+        padding: 1em;
+        margin: 4em 0;
+    }
+    .park-details-header {
+        margin: 0.75em 0;
+    }
+    .park-details-description {
+        margin: 0.5em 0;
+    }
+    .park-details-description h3 {
+        margin-bottom: 0.75em;
+        text-decoration: underline;
+    }
+    .park-details-description h4 {
+        margin-bottom: 0.5em;
+        line-height: 1.25em;
+    }
+    .park-details-address {
+        margin: 0.5em 0;
+    }
+    .park-details-address h3 {
+        margin-bottom: 0.5em;
+        text-decoration: underline;
+    }
+    .park-details-address h5 {
+        line-height: 1.25em;
+    }
+    .parkdetails-remark {
+        margin: 1em 0 6em 0;
+    }
+    .parkdetails-remark-content {
+        margin: 1em;
+    }
 }
 
 /* Telefoon in landscape mode */
 @media screen and (min-width: 576px) and (max-width: 767px) {
-
+    .parkdetails-inner-container {
+        max-width: 90%;
+        padding: 1.75em;
+        margin: 5em 0;
+    }
+    .park-details-header {
+        margin: 1.5em 0;
+    }
+    .park-details-description {
+        margin: 0.75em 0;
+    }
+    .park-details-description h3 {
+        margin-bottom: 0.75em;
+        text-decoration: underline;
+    }
+    .park-details-description h4 {
+        margin-bottom: 0.5em;
+        line-height: 1.25em;
+    }
+    .park-details-address {
+        margin: 0.75em 0;
+    }
+    .park-details-address h3 {
+        margin-bottom: 0.5em;
+        text-decoration: underline;
+    }
+    .park-details-address h5 {
+        line-height: 1.25em;
+    }
+    .parkdetails-remark {
+        margin: 1em 0 6em 0;
+    }
+    .parkdetails-remark-content {
+        margin: 1em;
+    }
 }
 
 /* Tablets */
 @media screen and (min-width: 768px) and (max-width: 991px) {
-
+    .parkdetails-inner-container {
+        max-width: 70%;
+        padding: 2em;
+        margin: 6em 0;
+    }
+    .park-details-header {
+        margin: 2em 0;
+    }
+    .park-details-description {
+        margin: 1em 0;
+    }
+    .park-details-description h3 {
+        margin-bottom: 0.75em;
+        text-decoration: underline;
+    }
+    .park-details-description h4 {
+        margin-bottom: 0.5em;
+        line-height: 1.25em;
+    }
+    .park-details-address {
+        margin: 1em 0;
+    }
+    .park-details-address h3 {
+        margin-bottom: 0.5em;
+        text-decoration: underline;
+    }
+    .park-details-address h5 {
+        line-height: 1.25em;
+    }
+    .parkdetails-remark {
+        margin: 1em 0 6em 0;
+    }
+    .parkdetails-remark-content {
+        margin: 1em;
+    }
 }
 
 /* Grote tablets en kleine computer schermen */
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-
+    .parkdetails-inner-container {
+        max-width: 70%;
+        padding: 2em;
+        margin: 8em 0;
+    }
+    .park-details-header {
+        margin: 2em 0;
+    }
+    .park-details-description {
+        margin: 1em 0;
+    }
+    .park-details-description h3 {
+        margin-bottom: 0.75em;
+        text-decoration: underline;
+    }
+    .park-details-description h4 {
+        margin-bottom: 0.5em;
+        line-height: 1.25em;
+    }
+    .park-details-address {
+        margin: 1em 0;
+    }
+    .park-details-address h3 {
+        margin-bottom: 0.5em;
+        text-decoration: underline;
+    }
+    .park-details-address h5 {
+        /*margin: 1em 0 1em 0;*/
+        line-height: 1.25em;
+    }
+    .parkdetails-remark {
+        margin: 3em 0 6em 0;
+    }
+    .parkdetails-remark-content {
+        margin: 1em;
+    }
 }
 
 /* Standaard computer scherm */
@@ -107,12 +268,18 @@
         margin: 1em 0;
     }
     .park-details-address h3 {
-        margin-bottom: 0.25em;
+        margin-bottom: 0.5em;
         text-decoration: underline;
     }
     .park-details-address h5 {
-        margin: 1em 0 1em 0;
+        /*margin: 1em 0 1em 0;*/
         line-height: 1.25em;
+    }
+    .parkdetails-remark {
+        margin: 4em 0 10em 0;
+    }
+    .parkdetails-remark-content {
+        margin: 1em;
     }
 }
 
@@ -145,7 +312,13 @@
         text-decoration: underline;
     }
     .park-details-address h5 {
-        margin: 0.5em 0 1em 0;
-        line-height: 1.5em;
+        /*margin: 0.5em 0 1em 0;*/
+        line-height: 1.25em;
+    }
+    .parkdetails-remark {
+        margin: 6em 0 12em 0;
+    }
+    .parkdetails-remark-content {
+        margin: 1em;
     }
 }
