--- a/src/pages/activitiesoverview/ActivitiesOverview.css
+++ b/src/pages/activitiesoverview/ActivitiesOverview.css
@@ -1,4 +1,3 @@
-
 /* ALGEMEEN */
 
 .activitiesoverview-outer-container {
@@ -10,6 +9,7 @@
     background-color: #EAE3D2;
     min-height: 100vh;
 }
+
 
 /* ACTIVITIES-OVERVIEW HEADER */
 
@@ -32,6 +32,7 @@
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
+
 /* ACTIVITIES-OVERVIEW TEXT SECTION */
 
 .activitiesoverview-text-section {
@@ -53,72 +54,18 @@
     flex-direction: column;
 }
 
-/* ACTIVITY-GROUP-LIST SECTION */
 
-.activityGroupListView-outer {
+/* ACTIVITIES-OVERVIEW FILTER BUTTON */
+
+.activitiesoverview-filter-and-buttons {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    max-width: 100%;
-    background-color: #3CBE6B;
-    border-top: 1px solid #8C887E;
-    border-bottom: 1px solid #8C887E;
-}
-
-.activityGroupListView-inner {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-}
-
-.activityGroupListItem {
-    display: flex;
-    flex-direction: row;
-    align-content: flex-start;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    border:2px solid #8C887E;
-}
-
-.activityGroupListItem.active a {
-    color: #FB7302;
-}
-
-.activityGroupListItem a{
-    color: #000000;
-    text-decoration: none;
-}
-
-.activityGroupListItem a:hover {
-    color: #FB7302;
-}
-
-/* ACTIVITY-PARK-LIST SECTION */
-
-.activityParkList {
-    display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
-    max-width: 100%;
+    align-items: baseline;
+    margin: 40px 0;
 }
 
-.activityParkList-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.activityParkList-header-content h2{
-    text-align: center;
-}
-
-.activityParkList-header-content h4{
-    text-align: left;
-}
-
-.activityParkList-style-filter-menu {
+.activitiesoverview-style-filter-menu {
     background-color: #3CBE6B;
     border-radius: 4px;
     border: 1px solid white;
@@ -126,373 +73,103 @@
     cursor: pointer;
 }
 
-.activityParkList-items {
+
+/* ACTIVITIES CARDS */
+
+.activities-cards-outer-container {
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.activities-cards-inner-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-basis: 100vw;
+    flex-wrap: wrap;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.activities-card {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-grow: 0;
-    flex-shrink: 1;
-    background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
     border-radius: 10px;
-    box-shadow: 12px 12px 12px rgba(255, 255, 255, 0.5);
-    border: 2px solid #FFFFFF;
+    border: 1px solid #3CBE6B;
+    flex-shrink: 1;
+    flex-grow: 0;
+    color: #FFFFFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+    background-color: #3CBE6B;
+    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.4);
 }
 
-.activityParkList-StyleUl {
-    list-style-type: none;
-}
-
-.activityParkList-StyleLi {
-    text-decoration: none;
-}
-
-.activityParkList-link a,
-.activityParkList-link a:visited,
-.activityParkList-link a:active {
+.activities-card a,
+.activities-card a:visited,
+.activities-card a:active {
     color: #FFFFFF;
     text-decoration: none;
 }
 
-.activityParkList-link a:hover {
+.activities-card a:hover {
     color: #FB7302;
 }
+
+
+
 
 /* ACTIVITIES-OVERVIEW MEDIA QUERIES */
 
 /* Telefoon in portrait mode */
 @media screen and (max-width: 576px) {
-    .activitiesoverview-header-content {
-        padding: 1em;
-        margin: 8em 1em;
-    }
-    .activitiesoverview-text-section {
-        margin: 2em 0;
-        padding: 0.5em 1em;
-        line-height: 1em;
-    }
-    .activitiesoverview-text-section-content {
-        max-width: 70%;
-    }
-    .activitiesoverview-text-section-content h3 {
-        margin: 0.75em 0;
-    }
-    .activitiesoverview-text-section-content h5 {
-        margin-bottom: 0.75em;
-    }
-    .activityGroupListView-outer {
-        margin-bottom: 1.5em;
-    }
-    .activityGroupListView-inner {
-        gap: 0.1em 0.2em;
-        margin: 0.5em;
-    }
-    .activityGroupListItem {
-        margin: 0.25em;
-        padding: 0.3em 0.5em;
-    }
-    .activityParkList-style-filter-menu {
-        width: 100px;
-        font-size: 0.5em;
-        padding: 1em 1em;
-        margin-bottom: 2em;
-    }
-    .activityParkList {
-        margin: 0.25em;
-    }
-    .activityParkList-header {
-        min-width: 30%;
-        max-width: 70%;
-        margin-bottom: 1.5em;
-    }
-    .activityParkList-header-content h3{
-        margin-bottom: 0.5em;
-        text-align: center;
-    }
-    .activityParkList-header-content h5{
-        line-height: 1.25em;
-        margin: 1em 0;
-    }
-    .activityParkList-items {
-        min-width: 60%;
-        max-width: 95%;
-        margin-bottom: 2em;
-        padding: 0.5em;
-    }
-    .activityParkList-StyleLi {
-        line-height: 1.25em;
-    }
+
 }
 
 /* Telefoon in landscape mode */
 @media screen and (min-width: 576px) and (max-width: 767px) {
-    .activitiesoverview-header-content {
-        padding: 1em;
-        margin: 10em 1em;
-    }
-    .activitiesoverview-text-section {
-        margin: 3em 0;
-        padding: 1em 2em;
-        line-height: 1.5em;
-    }
-    .activitiesoverview-text-section-content {
-        max-width: 70%;
-    }
-    .activitiesoverview-text-section-content h3 {
-        margin: 0.75em 0;
-    }
-    .activitiesoverview-text-section-content h5 {
-        margin-bottom: 0.75em;
-    }
-    .activityGroupListView-outer {
-        margin-bottom: 2em;
-    }
-    .activityGroupListView-inner {
-        gap: 0.2em 0.4em;
-        margin: 1em 2em;
-    }
-    .activityGroupListItem {
-        margin: 0.5em;
-        padding: 0.5em 0.75em;
-    }
-    .activityParkList-style-filter-menu {
-        width: 150px;
-        font-size: 0.75em;
-        padding: 0.75em 1em;
-        margin-bottom: 2em;
-    }
-    .activityParkList {
-        margin: 0.25em;
-    }
-    .activityParkList-header {
-        min-width: 30%;
-        max-width: 60%;
-        margin-bottom: 2em;
-    }
-    .activityParkList-header-content h3{
-        margin-bottom: 0.5em;
-        text-align: center;
-    }
-    .activityParkList-header-content h5{
-        line-height: 1.25em;
-        margin: 1em 0;
-    }
-    .activityParkList-items {
-        min-width: 60%;
-        max-width: 90%;
-        margin-bottom: 4em;
-        padding: 1em;
-    }
-    .activityParkList-StyleLi {
-        line-height: 1.25em;
-    }
+
 }
 
 /* Tablets */
 @media screen and (min-width: 768px) and (max-width: 991px) {
-    .activitiesoverview-header-content {
-        padding: 1em;
-        margin: 15em 1em;
-    }
-    .activitiesoverview-text-section {
-        margin: 3em 0;
-        padding: 1em 2em;
-        line-height: 1.5em;
-    }
-    .activitiesoverview-text-section-content {
-        max-width: 70%;
-    }
-    .activitiesoverview-text-section-content h3 {
-        margin: 0.75em 0;
-    }
-    .activitiesoverview-text-section-content h5 {
-        margin-bottom: 0.75em;
-    }
-    .activityGroupListView-outer {
-        margin-bottom: 2.5em;
-    }
-    .activityGroupListView-inner {
-        gap: 0.25em 0.75em;
-        margin: 2em 4em;
-    }
-    .activityGroupListItem {
-        margin: 0.5em;
-        padding: 0.5em 0.75em;
-    }
-    .activityParkList-style-filter-menu {
-        width: 175px;
-        font-size: 1em;
-        padding: 0.75em 1em;
-        margin-bottom: 2em;
-    }
-    .activityParkList {
-        margin: 0.25em;
-    }
-    .activityParkList-header {
-        min-width: 30%;
-        max-width: 60%;
-        margin-bottom: 2em;
-    }
-    .activityParkList-header-content h3{
-        margin-bottom: 0.5em;
-        text-align: center;
-    }
-    .activityParkList-header-content h5{
-        line-height: 1.25em;
-        margin: 1em 0;
-    }
-    .activityParkList-items {
-        min-width: 40%;
-        max-width: 90%;
-        margin-bottom: 4em;
-        padding: 1em;
-    }
-    .activityParkList-StyleLi {
-        line-height: 1.25em;
-    }
+
 }
 
 /* Grote tablets en kleine computer schermen */
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-    .activitiesoverview-header-content {
-        padding: 1em;
-        margin: 15em 1em;
-    }
-    .activitiesoverview-text-section {
-        margin: 3em 0;
-        padding: 1em 2em;
-        line-height: 1.75em;
-    }
-    .activitiesoverview-text-section-content {
-        max-width: 60%;
-    }
-    .activitiesoverview-text-section-content h3 {
-        margin: 0.75em 0;
-    }
-    .activitiesoverview-text-section-content h5 {
-        margin-bottom: 0.75em;
-    }
-    .activityGroupListView-outer {
-        margin-bottom: 3em;
-    }
-    .activityGroupListView-inner {
-        gap: 0.5em 1.25em;
-        margin: 2em 4em;
-    }
-    .activityGroupListItem {
-        margin: 0.5em;
-        padding: 0.5em 0.75em;
-    }
-    .activityParkList-style-filter-menu {
-        width: 175px;
-        font-size: 1em;
-        padding: 0.75em 1em;
-        margin-bottom: 1.5em;
-    }
-    .activityParkList {
-        margin: 0.25em;
-    }
-    .activityParkList-header {
-        min-width: 30%;
-        max-width: 60%;
-        margin-bottom: 2.5em;
-    }
-    .activityParkList-header-content h3{
-        margin-bottom: 0.5em;
-        text-align: center;
-    }
-    .activityParkList-header-content h5{
-        line-height: 1.25em;
-        margin: 0.5em 0;
-    }
-    .activityParkList-items {
-        min-width: 50%;
-        max-width: 85%;
-        margin-bottom: 4em;
-        padding: 1em;
-    }
-    .activityParkList-StyleLi {
-        line-height: 1.5em;
-    }
+
 }
 
 /* Standaard computer scherm */
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
-    .activitiesoverview-header-content {
-        padding: 1em;
-        margin: 13em 1em;
-    }
-    .activitiesoverview-text-section {
-        margin: 3em 0;
-        padding: 1em 2em;
-        line-height: 1.75em;
-    }
-    .activitiesoverview-text-section-content {
-        max-width: 60%;
-    }
-    .activitiesoverview-text-section-content h3 {
-        margin: 0.75em 0;
-    }
-    .activitiesoverview-text-section-content h5 {
-        margin-bottom: 0.75em;
-    }
-    .activityGroupListView-outer {
-        margin-bottom: 3em;
-    }
-    .activityGroupListView-inner {
-        gap: 0.25em 1.25em;
-        margin: 2em 4em;
-    }
-    .activityGroupListItem {
-        margin: 0.5em;
-        padding: 0.5em 0.75em;
-    }
-    .activityParkList-style-filter-menu {
-        width: 225px;
-        font-size: 1.25em;
-        padding: 0.5em 1em;
-        margin-bottom: 2em;
-    }
-    .activityParkList {
-        margin: 0.25em;
-    }
-    .activityParkList-header {
-        min-width: 30%;
-        max-width: 55%;
-        margin-bottom: 3em;
-    }
-    .activityParkList-header-content h3{
-        margin-bottom: 0.5em;
-        text-align: center;
-    }
-    .activityParkList-header-content h5{
-        line-height: 1.25em;
-        margin: 0.5em 0;
-    }
-    .activityParkList-items {
-        min-width: 50%;
-        max-width: 70%;
-        margin-bottom: 4em;
-        padding: 1em;
-    }
-    .activityParkList-StyleLi {
-        line-height: 1.5em;
-    }
+
 }
 
 /* Extra Large computer schermen */
 @media screen and (min-width: 1600px) {
     .activitiesoverview-header-content {
-        padding: 1em;
-        margin: 24em 1em;
+        padding: 20em 1em;
+        flex-basis: 60%;
+        margin: 1em;
+    }
+    .activitiesoverview-header-content h1 {
+        margin: 1em;
     }
     .activitiesoverview-text-section {
-        margin: 5em 0;
+        margin: 5em 0 3em 0;
         padding: 1em 2em;
         line-height: 2em;
     }
     .activitiesoverview-text-section-content {
-        max-width: 60%;
+        max-width: 40%;
     }
     .activitiesoverview-text-section-content h3 {
         margin: 1em 0;
@@ -500,45 +177,30 @@
     .activitiesoverview-text-section-content h5 {
         margin-bottom: 1em;
     }
-    .activityGroupListView-outer {
-        margin-bottom: 3em;
+    .activitiesoverview-filter-and-buttons {
+        margin: 3em 0;
     }
-    .activityGroupListView-inner {
-        gap: 1em 2em;
-        margin: 3em 5em;
-    }
-    .activityGroupListItem {
-        margin: 0.75em;
-        padding: 0.75em 1em;
-    }
-    .activityParkList-style-filter-menu {
-        width: 300px;
-        font-size: 1.50em;
+    .activitiesoverview-style-filter-menu {
+        width: 200px;
+        font-size: 1.25em;
         padding: 0.5em 1em;
-        margin-bottom: 2em;
     }
-    .activityParkList {
-        margin: 1em;
+
+    .activities-cards-inner-container {
+        padding: 0 2em;
+        gap: 8em;
+        margin: 0 4em;
     }
-    .activityParkList-header {
-        max-width: 40%;
-        margin-bottom: 3em;
+    .activities-card {
+        width: 600px;
+        height: 450px;
+        margin: 2em;
+        padding: 0.5em;
     }
-    .activityParkList-header-content h3{
-        margin-bottom: 0.5em;
-        text-align: center;
+    .select-activities-page label{
+        font-size: 1.25em;
     }
-    .activityParkList-header-content h5{
-        line-height: 1.25em;
-        margin: 0.5em 0;
-    }
-    .activityParkList-items {
-        min-width: 30%;
-        max-width: 60%;
-        margin-bottom: 4em;
-        padding: 1em;
-    }
-    .activityParkList-StyleLi {
-        line-height: 1.5em;
+    .select-activities-page select {
+        font-size: 1.25em;
     }
 }
