--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -303,7 +303,7 @@
         margin: 1em;
     }
     .profile-form-style {
-        width: 35%;
+        min-width: 60%;
         margin: 0;
         padding: 4em 0 3em 0;
     }
