--- a/src/pages/signin/SignIn.css
+++ b/src/pages/signin/SignIn.css
@@ -318,7 +318,7 @@
         margin: 1em;
     }
     .signin-form-style {
-        width: 35%;
+        min-width: 60%;
         margin: 0;
         padding: 4em 0 3em 0;
     }
