--- a/src/pages/parkoverview/ParkOverview.css
+++ b/src/pages/parkoverview/ParkOverview.css
@@ -1,4 +1,3 @@
-
 /* ALGEMEEN */
 
 .parkoverview-outer-container {
@@ -84,7 +83,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    flex-basis: 100vw;
+    flex-basis: auto;
+    max-width: 100%;
     flex-wrap: wrap;
     flex-shrink: 1;
     flex-grow: 1;
@@ -178,7 +178,7 @@
 /* Telefoon in landscape mode */
 @media screen and (min-width: 576px) and (max-width: 767px) {
     .parkoverview-header-content {
-        padding: 5em 1em;
+        padding: 3em 1em;
         flex-basis: 70%;
         margin: 1em;
     }
@@ -191,7 +191,7 @@
         line-height: 1.25em;
     }
     .parkoverview-text-section-content {
-        max-width: 65%;
+        max-width: 70%;
     }
     .parkoverview-text-section-content h3 {
         margin: 0.75em 0;
@@ -205,7 +205,7 @@
     .parkoverview-style-filter-menu {
         width: 150px;
         font-size: 0.75em;
-        padding: 0.75em 1em;
+        padding: 0.5em 1em;
     }
     .park-cards-inner-container {
         padding: 0 0.75em;
@@ -286,7 +286,7 @@
 /* Grote tablets en kleine computer schermen */
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .parkoverview-header-content {
-        padding: 5em 1em;
+        padding: 7em 1em;
         flex-basis: 70%;
         margin: 1em;
     }
@@ -365,7 +365,7 @@
         margin: 2em 0;
     }
     .parkoverview-style-filter-menu {
-        width: 225px;
+        width: 200px;
         font-size: 1.25em;
         padding: 0.5em 1em;
     }
@@ -394,8 +394,8 @@
 /* Extra Large computer schermen */
 @media screen and (min-width: 1600px) {
     .parkoverview-header-content {
-        padding: 20em 1em;
-        flex-basis: 60%;
+        padding: 18em 1em;
+        flex-basis: 50%;
         margin: 1em;
     }
     .parkoverview-header-content h1 {
@@ -419,8 +419,8 @@
         margin: 3em 0;
     }
     .parkoverview-style-filter-menu {
-        width: 300px;
-        font-size: 1.50em;
+        width: 225px;
+        font-size: 1.25em;
         padding: 0.5em 1em;
     }
     .park-cards-inner-container {
